--- a/public/styles.css
+++ b/public/styles.css
@@ -6,11 +6,10 @@
 }
 
 body {
-  background: linear-gradient(
-    90deg,
-    rgba(48, 16, 255, 1) 0%,
-    rgba(100, 115, 255, 1) 100%
-  );
+  background: linear-gradient(90deg,
+  rgba(2,0,36,1) 0%,
+  rgba(9,9,121,1) 35%,
+  rgba(0,212,255,1) 100%);
 }
 
 .todo-container {
